<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/fab_margin">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--ID-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:paddingTop="5dp"
                    android:id="@+id/txtID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact_id"
                    android:textColor="@color/green"
                    android:textColorHint="@color/blue"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <!--First Name-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:paddingTop="5dp"
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact_first_name"
                    android:textColor="@color/green"
                    android:textColorHint="@color/blue"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <!--Last Name-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:paddingTop="5dp"
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact_last_name"
                    android:textColor="@color/green"
                    android:textColorHint="@color/blue"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <!--Phone-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:paddingTop="5dp"
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact_phone"
                    android:textColor="@color/green"
                    android:textColorHint="@color/blue"
                    android:inputType="phone"
                    android:digits="0123456789+" />
            </android.support.design.widget.TextInputLayout>
            <!--Mail-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:paddingTop="5dp"
                    android:id="@+id/txtMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact_mail"
                    android:textColor="@color/green"
                    android:textColorHint="@color/blue"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <!--Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                tools:ignore="RtlHardcoded">

                <Button
                    android:layout_marginEnd="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/btnEdit"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:text="@string/edit_contact"
                    android:textColor="@color/green"/>

                <Button
                    android:layout_marginEnd="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/btnSave"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:text="@string/save_contact"
                    android:textColor="@color/green"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>