<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_login_blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:gravity="center"
        android:textAlignment="center"
        android:orientation="vertical">
        <!--Mail-->
        <LinearLayout
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/form_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/mail"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mail"
                    android:textColor="@color/green"
                    android:textColorHint="@color/blue"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--Pass-->
        <LinearLayout
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/form_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/pass"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/green"
                    android:textColorHint="@color/blue"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--Checkbox remember me-->
        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/form_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:background="@drawable/form_borders"
                android:id="@+id/chbRem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textColor="@color/green"
                android:checked="true"/>
        </LinearLayout>
        <!--Button Sing in-->
        <LinearLayout
            android:background="@drawable/form_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>