<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/parentLayout">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone" />

    <!--Names & ID-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/txtfName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_first_name"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue_alt"
            android:gravity="left"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txtlName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_last_name"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue_alt"
            android:gravity="left"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txtcId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_id"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gold"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
    <!--Phone-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cPhone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green" />
-->
        <TextView
            android:id="@+id/txtcPhone"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green_alt" />

    </LinearLayout>
    <!--Mail-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cMail"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green" />
-->
        <TextView
            android:id="@+id/txtcMail"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green_alt" />

    </LinearLayout>

</LinearLayout>